[package]
name = "examples-remastered"
version = "0.1.0"
authors = ["Mathis <mk@thepeaklab.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
yew = { version = "0.13.0", features = ["web_sys"] }
js-sys = "0.3.36"
serde = "1.0.104"
[dependencies.web-sys]
version = "0.3.36"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'HtmlElement',
  'HtmlHeadElement',
  'Node'
]